Update 17课 做卫生 课文词汇和扩展短语.md

--- a/17课 做卫生 课文词汇和扩展短语.md
+++ b/17课 做卫生 课文词汇和扩展短语.md
@@ -242,3 +242,213 @@
 ใหม่	！	New	！	新的	！	ใหม่	！	ใหม่	！	ใหม่	！	ใหม่	！	ใหม่	！
 
 ใหม่เอี่ยม	！	Brand new, pristine	！	崭新的	！	ใหม่เอี่ยม	！	ใหม่เอี่ยม	！	ใหม่เอี่ยม	！	ใหม่เอี่ยม	！	ใหม่เอี่ยม	！
+
+ของ	！	Of, belonging to	！	东西	！	ของ	！	ของ	！	ของ	！	ของ	！	ของ	！
+
+ของใช้ในบ้าน	！	Household items	！	家用品	！	ของใช้ในบ้าน	！	ของใช้ในบ้าน	！	ของใช้ในบ้าน	！	ของใช้ในบ้าน	！	ของใช้ในบ้าน	！
+
+ทีหลัง	！	Later	！	后来	！	ทีหลัง	！	ทีหลัง	！	ทีหลัง	！	ทีหลัง	！	ทีหลัง	！
+
+ล่าง	！	Below	！	在…下面	！	ล่าง	！	ล่าง	！	ล่าง	！	ล่าง	！	ล่าง	！
+
+หลัง	！	Behind	！	在…后面	！	หลัง	！	หลัง	！	หลัง	！	หลัง	！	หลัง	！
+
+ภายหลัง	！	After	！	之后	！	ภายหลัง	！	ภายหลัง	！	ภายหลัง	！	ภายหลัง	！	ภายหลัง	！
+
+ทีหลังนี้	！	After this time	！	这次之后	！	ทีหลังนี้	！	ทีหลังนี้	！	ทีหลังนี้	！	ทีหลังนี้	！	ทีหลังนี้	！
+
+ทุกซอกทุกมุม	！	Every nook and cranny	！	每个角落，每个缝隙	！	ทุกซอกทุกมุม	！	ทุกซอกทุกมุม	！	ทุกซอกทุกมุม	！	ทุกซอกทุกมุม	！	ทุกซอกทุกมุม	！
+
+ทุกที่	！	Everywhere	！	到处	！	ทุกที่	！	ทุกที่	！	ทุกที่	！	ทุกที่	！	ทุกที่	！
+
+กะละมัง	！	Basin	！	水盆	！	กะละมัง	！	กะละมัง	！	กะละมัง	！	กะละมัง	！	กะละมัง	！
+
+อ่าง	！	Basin	！	水盆	！	อ่าง	！	อ่าง	！	อ่าง	！	อ่าง	！	อ่าง	！
+
+ซักผ้าในกะละมัง	！	Wash clothes in the basin	！	在水盆里面洗衣服	！	ซักผ้าในกะละมัง	！	ซักผ้าในกะละมัง	！	ซักผ้าในกะละมัง	！	ซักผ้าในกะละมัง	！	ซักผ้าในกะละมัง	！
+
+ประโยชน์	！	Benefit, advantage	！	好处，益处	！	ประโยชน์	！	ประโยชน์	！	ประโยชน์	！	ประโยชน์	！	ประโยชน์	！
+
+คุณค่า	！	Value	！	价值	！	คุณค่า	！	คุณค่า	！	คุณค่า	！	คุณค่า	！	คุณค่า	！
+
+ใช้ให้เกิดประโยชน์	！	Make use of	！	发挥价值	！	ใช้ให้เกิดประโยชน์	！	ใช้ให้เกิดประโยชน์	！	ใช้ให้เกิดประโยชน์	！	ใช้ให้เกิดประโยชน์	！	ใช้ให้เกิดประโยชน์	！
+
+มีประโยชน์	！	Useful	！	有用的	！	มีประโยชน์	！	มีประโยชน์	！	มีประโยชน์	！	มีประโยชน์	！	มีประโยชน์	！
+
+ชั้นวางหนังสือ	！	Bookshelf	！	书架	！	ชั้นวางหนังสือ	！	ชั้นวางหนังสือ	！	ชั้นวางหนังสือ	！	ชั้นวางหนังสือ	！	ชั้นวางหนังสือ	！
+
+ตู้หนังสือ	！	Bookshelf	！	书柜	！	ตู้หนังสือ	！	ตู้หนังสือ	！	ตู้หนังสือ	！	ตู้หนังสือ	！	ตู้หนังสือ	！
+
+วางหนังสือบนชั้น	！	Put books on the shelf	！	把书放在书架上	！	วางหนังสือบนชั้น	！	วางหนังสือบนชั้น	！	วางหนังสือบนชั้น	！	วางหนังสือบนชั้น	！	วางหนังสือบนชั้น	！
+
+เป็นพิเศษ	！	Special	！	特别的	！	เป็นพิเศษ	！	เป็นพิเศษ	！	เป็นพิเศษ	！	เป็นพิเศษ	！	เป็นพิเศษ	！
+
+เขาทำอาหารเป็นพิเศษให้ฉัน	！	He made a special meal for me	！	他特别为我做了饭	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！	เขาทำอาหารเป็นพิเศษให้ฉัน	！
+
+กระบ๋อง	！	Can, tin can	！	罐头	！	กระบ๋อง	！	กระบ๋อง	！	กระบ๋อง	！	กระบ๋อง	！	กระบ๋อง	！
+
+ขวด	！	Bottle	！	瓶子	！	ขวด	！	ขวด	！	ขวด	！	ขวด	！	ขวด	！
+
+น้ำอัดลม	！	Soft drink	！	汽水	！	น้ำอัดลม	！	น้ำอัดลม	！	น้ำอัดลม	！	น้ำอัดลม	！	น้ำอัดลม	！
+
+กระป๋องน้ำอัดลม	！	Can of soda	！	汽水瓶	！	กระป๋องน้ำอัดลม	！	กระป๋องน้ำอัดลม	！	กระป๋องน้ำอัดลม	！	กระป๋องน้ำอัดลม	！	กระป๋องน้ำอัดลม	！
+
+ธรรมดา	！	Ordinary, normal	！	普通的，常见的	！	ธรรมดา	！	ธรรมดา	！	ธรรมดา	！	ธรรมดา	！	ธรรมดา	！
+
+รูป	！	Picture, form	！	图片，形式	！	รูป	！	รูป	！	รูป	！	รูป	！	รูป	！
+
+ภาพ	！	Image	！	图像	！	ภาพ	！	ภาพ	！	ภาพ	！	ภาพ	！	ภาพ	！
+
+รูปถ่าย	！	Photograph	！	照片	！	รูปถ่าย	！	รูปถ่าย	！	รูปถ่าย	！	รูปถ่าย	！	รูปถ่าย	！
+
+ถ่ายรูป	！	Take a picture	！	拍照	！	ถ่ายรูป	！	ถ่ายรูป	！	ถ่ายรูป	！	ถ่ายรูป	！	ถ่ายรูป	！
+
+ใช้ประโยชน์ใม่ได้	！	Useless	！	无用的	！	ใช้ประโยชน์ใม่ได้	！	ใช้ประโยชน์ใม่ได้	！	ใช้ประโยชน์ใม่ได้	！	ใช้ประโยชน์ใม่ได้	！	ใช้ประโยชน์ใม่ได้	！
+
+ไร้ประโยชน์	！	Useless	！	无用的	！	ไร้ประโยชน์	！	ไร้ประโยชน์	！	ไร้ประโยชน์	！	ไร้ประโยชน์	！	ไร้ประโยชน์	！
+
+ของที่ใช้ประโยชน์ไม่ได้	！	Useless item	！	这个没有用的东西	！	ของที่ใช้ประโยชน์ไม่ได้	！	ของที่ใช้ประโยชน์ไม่ได้	！	ของที่ใช้ประโยชน์ไม่ได้	！	ของที่ใช้ประโยชน์ไม่ได้	！	ของที่ใช้ประโยชน์ไม่ได้	！
+
+แปรงสีพัน	！	Toothbrush	！	牙刷	！	แปรงสีพัน	！	แปรงสีพัน	！	แปรงสีพัน	！	แปรงสีพัน	！	แปรงสีพัน	！
+
+วิว	！	View	！	视野，景色	！	วิว	！	วิว	！	วิว	！	วิว	！	วิว	！
+
+วิวทะเล	！	Sea view	！	海景	！	วิวทะเล	！	วิวทะเล	！	วิวทะเล	！	วิวทะเล	！	วิวทะเล	！
+
+ชมวิว	！	Enjoy the view	！	欣赏风景	！	ชมวิว	！	ชมวิว	！	ชมวิว	！	ชมวิว	！	ชมวิว	！
+
+ถาม	！	Ask	！	问	！	ถาม	！	ถาม	！	ถาม	！	ถาม	！	ถาม	！
+
+สอบถาม	！	Inquire	！	询问	！	สอบถาม	！	สอบถาม	！	สอบถาม	！	สอบถาม	！	สอบถาม	！
+
+ถามคำถาม	！	Ask a question	！	问问题	！	ถามคำถาม	！	ถามคำถาม	！	ถามคำถาม	！	ถามคำถาม	！	ถามคำถาม	！
+
+หวี	！	Comb	！	梳子	！	หวี	！	หวี	！	หวี	！	หวี	！	หวี	！
+
+แปรงผม	！	Hairbrush	！	梳子	！	แปรงผม	！	แปรงผม	！	แปรงผม	！	แปรงผม	！	แปรงผม	！
+
+หวีผม	！	Comb hair	！	梳头发	！	หวีผม	！	หวีผม	！	หวีผม	！	หวีผม	！	หวีผม	！
+
+หน้าม้า	！	Bangs	！	刘海儿	！	หน้าม้า	！	หน้าม้า	！	หน้าม้า	！	หน้าม้า	！	หน้าม้า	！
+
+ถักเปีย	！	Braid	！	辫子	！	ถักเปีย	！	ถักเปีย	！	ถักเปีย	！	ถักเปีย	！	ถักเปีย	！
+
+โละทิ้ง	！	Throw away, discard	！	丢弃，抛掉	！	โละทิ้ง	！	โละทิ้ง	！	โละทิ้ง	！	โละทิ้ง	！	โละทิ้ง	！
+
+ทิ้ง	！	Throw away	！	丢弃	！	ทิ้ง	！	ทิ้ง	！	ทิ้ง	！	ทิ้ง	！	ทิ้ง	！
+
+ถังขยะ	！	Trash can	！	垃圾桶	！	ถังขยะ	！	ถังขยะ	！	ถังขยะ	！	ถังขยะ	！	ถังขยะ	！
+
+เก็บ	！	Keep	！	保留	！	เก็บ	！	เก็บ	！	เก็บ	！	เก็บ	！	เก็บ	！
+
+โละทิ้งของเก่า	！	Throw away old things	！	丢掉旧东西	！	โละทิ้งของเก่า	！	โละทิ้งของเก่า	！	โละทิ้งของเก่า	！	โละทิ้งของเก่า	！	โละทิ้งของเก่า	！
+
+รูปวิว	！	Scenic view	！	风景画	！	รูปวิว	！	รูปวิว	！	รูปวิว	！	รูปวิว	！	รูปวิว	！
+
+ภาพวิว	！	Scenic picture	！	风景画	！	ภาพวิว	！	ภาพวิว	！	ภาพวิว	！	ภาพวิว	！	ภาพวิว	！
+
+รูปวิวภูเขา	！	Mountain scenic view	！	山景画	！	รูปวิวภูเขา	！	รูปวิวภูเขา	！	รูปวิวภูเขา	！	รูปวิวภูเขา	！	รูปวิวภูเขา	！
+
+ตอบ	！	Answer	！	回答	！	ตอบ	！	ตอบ	！	ตอบ	！	ตอบ	！	ตอบ	！
+
+แก้	！	Solve, fix	！	解答	！	แก้	！	แก้	！	แก้	！	แก้	！	แก้	！
+
+ตอบคำถาม	！	Answer the question	！	回答问题	！	ตอบคำถาม	！	ตอบคำถาม	！	ตอบคำถาม	！	ตอบคำถาม	！	ตอบคำถาม	！
+
+ตอบทันที	！	Answer immediately	！	立刻回答	！	ตอบทันที	！	ตอบทันที	！	ตอบทันที	！	ตอบทันที	！	ตอบทันที	！
+
+เครื่องสําอาง	！	Cosmetics	！	化妆品	！	เครื่องสําอาง	！	เครื่องสําอาง	！	เครื่องสําอาง	！	เครื่องสําอาง	！	เครื่องสําอาง	！
+
+สำอาง	！	Cosmetics	！	化妆品	！	สำอาง	！	สำอาง	！	สำอาง	！	สำอาง	！	สำอาง	！
+
+แต่งหน้า	！	Make up	！	化妆	！	แต่งหน้า	！	แต่งหน้า	！	แต่งหน้า	！	แต่งหน้า	！	แต่งหน้า	！
+
+หน้าสด	！	No makeup	！	素颜	！	หน้าสด	！	หน้าสด	！	หน้าสด	！	หน้าสด	！	หน้าสด	！
+
+อนามัย	！	Health	！	卫生，健康	！	อนามัย	！	อนามัย	！	อนามัย	！	อนามัย	！	อนามัย	！
+
+รักษาอนามัย	！	Maintain hygiene	！	保持卫生	！	รักษาอนามัย	！	รักษาอนามัย	！	รักษาอนามัย	！	รักษาอนามัย	！	รักษาอนามัย	！
+
+แผ่นอนามัย	！	Sanitary pad	！	卫生巾	！	แผ่นอนามัย	！	แผ่นอนามัย	！	แผ่นอนามัย	！	แผ่นอนามัย	！	แผ่นอนามัย	！
+
+ถ้วยอนามัย	！	Menstrual cup	！	月经杯	！	ถ้วยอนามัย	！	ถ้วยอนามัย	！	ถ้วยอนามัย	！	ถ้วยอนามัย	！	ถ้วยอนามัย	！
+
+ติด	！	Stick, attach, infected	！	附着，感染	！	ติด	！	ติด	！	ติด	！	ติด	！	ติด	！
+
+แปะ	！	Stick, paste	！	贴着	！	แปะ	！	แปะ	！	แปะ	！	แปะ	！	แปะ	！
+
+หลุด	！	Fall off, come off	！	脱落	！	หลุด	！	หลุด	！	หลุด	！	หลุด	！	หลุด	！
+
+ติดแน่น	！	Stick firmly	！	粘的牢固；粘的紧	！	ติดแน่น	！	ติดแน่น	！	ติดแน่น	！	ติดแน่น	！	ติดแน่น	！
+
+ติดใจ	！	Be fascinated, be fond of	！	着迷	！	ติดใจ	！	ติดใจ	！	ติดใจ	！	ติดใจ	！	ติดใจ	！
+
+ฉันติดใจอาหารไทย	！	I became fond of Thai food	！	我喜欢上了泰国菜	！	ฉันติดใจอาหารไทย	！	ฉันติดใจอาหารไทย	！	ฉันติดใจอาหารไทย	！	ฉันติดใจอาหารไทย	！	ฉันติดใจอาหารไทย	！
+
+ตาม	！	Follow, according to	！	跟随，按照	！	ตาม	！	ตาม	！	ตาม	！	ตาม	！	ตาม	！
+
+ติดตาม	！	Follow, track	！	紧跟着	！	ติดตาม	！	ติดตาม	！	ติดตาม	！	ติดตาม	！	ติดตาม	！
+
+ตามมา	！	Come after, follow	！	跟着来	！	ตามมา	！	ตามมา	！	ตามมา	！	ตามมา	！	ตามมา	！
+
+ตามคำสั่ง	！	According to the order	！	按照命令	！	ตามคำสั่ง	！	ตามคำสั่ง	！	ตามคำสั่ง	！	ตามคำสั่ง	！	ตามคำสั่ง	！
+
+วาง	！	Put, place	！	放，放置	！	วาง	！	วาง	！	วาง	！	วาง	！	วาง	！
+
+ความเห็น	！	Opinion	！	意见	！	ความเห็น	！	ความเห็น	！	ความเห็น	！	ความเห็น	！	ความเห็น	！
+
+ไม่เห็นด้วย	！	Disagree	！	不同意	！	ไม่เห็นด้วย	！	ไม่เห็นด้วย	！	ไม่เห็นด้วย	！	ไม่เห็นด้วย	！	ไม่เห็นด้วย	！
+
+แสดงความเห็น	！	Express an opinion	！	发表意见	！	แสดงความเห็น	！	แสดงความเห็น	！	แสดงความเห็น	！	แสดงความเห็น	！	แสดงความเห็น	！
+
+เป็นไง	！	How is it?	！	怎么样（口语）	！	เป็นไง	！	เป็นไง	！	เป็นไง	！	เป็นไง	！	เป็นไง	！
+
+เป็นไงบ้าง	！	How’s it going?	！	怎么样了	！	เป็นไงบ้าง	！	เป็นไงบ้าง	！	เป็นไงบ้าง	！	เป็นไงบ้าง	！	เป็นไงบ้าง	！
+
+เป็นอย่างไร	！	How is it?	！	怎么样，如何	！	เป็นอย่างไร	！	เป็นอย่างไร	！	เป็นอย่างไร	！	เป็นอย่างไร	！	เป็นอย่างไร	！
+
+เป็นอย่างไรบ้าง	！	How have things been?	！	怎么样了	！	เป็นอย่างไรบ้าง	！	เป็นอย่างไรบ้าง	！	เป็นอย่างไรบ้าง	！	เป็นอย่างไรบ้าง	！	เป็นอย่างไรบ้าง	！
+
+ประเพณี	！	Tradition	！	传统	！	ประเพณี	！	ประเพณี	！	ประเพณี	！	ประเพณี	！	ประเพณี	！
+
+ประเพณีไทย	！	Thai tradition	！	泰国传统	！	ประเพณีไทย	！	ประเพณีไทย	！	ประเพณีไทย	！	ประเพณีไทย	！	ประเพณีไทย	！
+
+สืบสานประเพณี	！	Continue the tradition	！	传承传统	！	สืบสานประเพณี	！	สืบสานประเพณี	！	สืบสานประเพณี	！	สืบสานประเพณี	！	สืบสานประเพณี	！
+
+เกะกะ	！	Messy, cluttered	！	杂乱，凌乱	！	เกะกะ	！	เกะกะ	！	เกะกะ	！	เกะกะ	！	เกะกะ	！
+
+เป็นระเบียบ	！	Neat, organized	！	整齐的	！	เป็นระเบียบ	！	เป็นระเบียบ	！	เป็นระเบียบ	！	เป็นระเบียบ	！	เป็นระเบียบ	！
+
+เกะกะตา	！	Unattractive, unsightly	！	碍眼	！	เกะกะตา	！	เกะกะตา	！	เกะกะตา	！	เกะกะตา	！	เกะกะตา	！
+
+ลงมือ	！	Take action, start	！	动手，开始	！	ลงมือ	！	ลงมือ	！	ลงมือ	！	ลงมือ	！	ลงมือ	！
+
+ลงมือทำทันที	！	Start immediately	！	立刻开始做	！	ลงมือทำทันที	！	ลงมือทำทันที	！	ลงมือทำทันที	！	ลงมือทำทันที	！	ลงมือทำทันที	！
+
+วันขึ้นปีใหม่	！	New Year’s Day	！	新年，元旦	！	วันขึ้นปีใหม่	！	วันขึ้นปีใหม่	！	วันขึ้นปีใหม่	！	วันขึ้นปีใหม่	！	วันขึ้นปีใหม่	！
+
+ฉลอง	！	Celebrate	！	庆祝	！	ฉลอง	！	ฉลอง	！	ฉลอง	！	ฉลอง	！	ฉลอง	！
+
+ฉลองวันขึ้นปีใหม่	！	Celebrate New Year’s Day	！	庆祝新年	！	ฉลองวันขึ้นปีใหม่	！	ฉลองวันขึ้นปีใหม่	！	ฉลองวันขึ้นปีใหม่	！	ฉลองวันขึ้นปีใหม่	！	ฉลองวันขึ้นปีใหม่	！
+
+งานฉลอง	！	Celebration event	！	庆祝活动	！	งานฉลอง	！	งานฉลอง	！	งานฉลอง	！	งานฉลอง	！	งานฉลอง	！
+
+เทศกาล	！	Festival	！	节日	！	เทศกาล	！	เทศกาล	！	เทศกาล	！	เทศกาล	！	เทศกาล	！
+
+เทศกาลสงกรานต์	！	Songkran Festival (Thai New Year)	！	泼水节	！	เทศกาลสงกรานต์	！	เทศกาลสงกรานต์	！	เทศกาลสงกรานต์	！	เทศกาลสงกรานต์	！	เทศกาลสงกรานต์	！
+
+สวย	！	Beautiful	！	美丽的	！	สวย	！	สวย	！	สวย	！	สวย	！	สวย	！
+
+แต่งตัวสวย	！	Dress beautifully	！	打扮的漂亮	！	แต่งตัวสวย	！	แต่งตัวสวย	！	แต่งตัวสวย	！	แต่งตัวสวย	！	แต่งตัวสวย	！
+
+ชาวจีน	！	Chinese people	！	中国人	！	ชาวจีน	！	ชาวจีน	！	ชาวจีน	！	ชาวจีน	！	ชาวจีน	！
+
+ทุกสิ่งทุกอย่าง	！	Everything	！	一切，所有的事情	！	ทุกสิ่งทุกอย่าง	！	ทุกสิ่งทุกอย่าง	！	ทุกสิ่งทุกอย่าง	！	ทุกสิ่งทุกอย่าง	！	ทุกสิ่งทุกอย่าง	！
+
+ถือ…เป็น…	！	Consider… as…	！	认为…是…	！	ถือ…เป็น…	！	ถือ…เป็น…	！	ถือ…เป็น…	！	ถือ…เป็น…	！	ถือ…เป็น…	！
+
+ฉันถือเขาเป็นเพื่อน	！	I consider him a friend	！	我把他当做朋友	！	ฉันถือเขาเป็นเพื่อน	！	ฉันถือเขาเป็นเพื่อน	！	ฉันถือเขาเป็นเพื่อน	！	ฉันถือเขาเป็นเพื่อน	！	ฉันถือเขาเป็นเพื่อน	！
+
+ตรงไหน	！	Where	！	哪里	！	ตรงไหน	！	ตรงไหน	！	ตรงไหน	！	ตรงไหน	！	ตรงไหน	！
+
+เธอเจ็บตรงไหน	！	Where does it hurt?	！	你哪里痛？	！	เธอเจ็บตรงไหน	！	เธอเจ็บตรงไหน	！	เธอเจ็บตรงไหน	！	เธอเจ็บตรงไหน	！	เธอเจ็บตรงไหน	！
