--- a/9课 餐厅朗读词汇.md
+++ b/9课 餐厅朗读词汇.md
@@ -147,3 +147,75 @@
 ผัดกะเพราหมูสับ	-	ผัดกะเพราหมูสับ	-	"Basil fried pork with rice"	ผัดกะเพราหมูสับ	-	ผัดกะเพราหมูสับ	-	ผัดกะเพราหมูสับ	"Basil fried pork with rice"
 
 ก๋วยเตี๋ยวเนื้อ	-	ก๋วยเตี๋ยวเนื้อ	-	Beef noodles	ก๋วยเตี๋ยวเนื้อ	-	ก๋วยเตี๋ยวเนื้อ	-	ก๋วยเตี๋ยวเนื้อ	Beef noodles
+
+
+													
+玻璃杯，水杯	！	drinking glass	！	แก้วน้ำ	！	แก้วน้ำ	！	แก้วน้ำ	！	แก้วน้ำ	！	แก้วน้ำ	！
+
+水杯	！	water cup	！	ถ้วยน้ำ	！	ถ้วยน้ำ	！	ถ้วยน้ำ	！	ถ้วยน้ำ	！	ถ้วยน้ำ	！
+
+壶，罐	！	jug, pitcher	！	เหยือก	！	เหยือก	！	เหยือก	！	เหยือก	！	เหยือก	！
+
+水壶	！	water jug	！	เหยือกน้ำ	！	เหยือกน้ำ	！	เหยือกน้ำ	！	เหยือกน้ำ	！	เหยือกน้ำ	！
+
+从壶里倒水	！	pour water from a jug	！	เทน้ำจากเหยือก	！	เทน้ำจากเหยือก	！	เทน้ำจากเหยือก	！	เทน้ำจากเหยือก	！	เทน้ำจากเหยือก	！
+
+水桶	！	water bucket	！	ถังน้ำ	！	ถังน้ำ	！	ถังน้ำ	！	ถังน้ำ	！	ถังน้ำ	！
+
+从水桶舀水	！	scoop water from a bucket	！	ตักน้ำจากถังน้ำ	！	ตักน้ำจากถังน้ำ	！	ตักน้ำจากถังน้ำ	！	ตักน้ำจากถังน้ำ	！	ตักน้ำจากถังน้ำ	！
+
+勺子	！	spoon	！	ช้อน	！	ช้อน	！	ช้อน	！	ช้อน	！	ช้อน	！
+
+汤勺	！	soup spoon	！	ช้อนซุป	！	ช้อนซุป	！	ช้อนซุป	！	ช้อนซุป	！	ช้อนซุป	！
+
+叉子放在盘子旁边	！	The fork is placed next to the plate	！	ส้อมวางอยู่ข้างจาน	！	ส้อมวางอยู่ข้างจาน	！	ส้อมวางอยู่ข้างจาน	！	ส้อมวางอยู่ข้างจาน	！	ส้อมวางอยู่ข้างจาน	！
+
+叉子	！	fork	！	ส้อม	！	ส้อม	！	ส้อม	！	ส้อม	！	ส้อม	！
+
+刀	！	knife	！	มีด	！	มีด	！	มีด	！	มีด	！	มีด	！
+
+切菜刀	！	vegetable cutting knife	！	มีดหั่นผัก	！	มีดหั่นผัก	！	มีดหั่นผัก	！	มีดหั่นผัก	！	มีดหั่นผัก	！
+
+盘子	！	plate	！	จาน	！	จาน	！	จาน	！	จาน	！	จาน	！
+
+把食物放在盘子上	！	place food on the plate	！	วางอาหารไว้บนจาน	！	วางอาหารไว้บนจาน	！	วางอาหารไว้บนจาน	！	วางอาหารไว้บนจาน	！	วางอาหารไว้บนจาน	！
+
+碗	！	bowl	！	ชาม	！	ชาม	！	ชาม	！	ชาม	！	ชาม	！
+
+我把汤盛到碗里	！	I scoop soup into a bowl	！	ฉันตักซุปใส่ชาม	！	ฉันตักซุปใส่ชาม	！	ฉันตักซุปใส่ชาม	！	ฉันตักซุปใส่ชาม	！	ฉันตักซุปใส่ชาม	！
+
+平底锅	！	frying pan	！	กระทะ	！	กระทะ	！	กระทะ	！	กระทะ	！	กระทะ	！
+
+炸锅	！	frying pan (for deep frying)	！	กระทะทอด	！	กระทะทอด	！	กระทะทอด	！	กระทะทอด	！	กระทะทอด	！
+
+在锅里做饭	！	cook food in a pan	！	ทำอาหารในกระทะ	！	ทำอาหารในกระทะ	！	ทำอาหารในกระทะ	！	ทำอาหารในกระทะ	！	ทำอาหารในกระทะ	！
+
+锅	！	pot	！	หม้อ	！	หม้อ	！	หม้อ	！	หม้อ	！	หม้อ	！
+
+煮锅	！	boiling pot	！	หม้อต้ม	！	หม้อต้ม	！	หม้อต้ม	！	หม้อต้ม	！	หม้อต้ม	！
+
+锅铲	！	spatula	！	ตะหลิว	！	ตะหลิว	！	ตะหลิว	！	ตะหลิว	！	ตะหลิว	！
+
+盛饭勺	！	serving spoon	！	ช้อนตัก	！	ช้อนตัก	！	ช้อนตัก	！	ช้อนตัก	！	ช้อนตัก	！
+
+电炉	！	electric stove	！	เตาไฟฟ้า	！	เตาไฟฟ้า	！	เตาไฟฟ้า	！	เตาไฟฟ้า	！	เตาไฟฟ้า	！
+
+木炭炉	！	charcoal stove	！	เตาถ่าน	！	เตาถ่าน	！	เตาถ่าน	！	เตาถ่าน	！	เตาถ่าน	！
+
+微波炉	！	microwave oven	！	เตาไมโครเวฟ	！	เตาไมโครเวฟ	！	เตาไมโครเวฟ	！	เตาไมโครเวฟ	！	เตาไมโครเวฟ	！
+
+砧板	！	cutting board	！	เขียง	！	เขียง	！	เขียง	！	เขียง	！	เขียง	！
+
+木砧板	！	wooden cutting board	！	เขียงไม้	！	เขียงไม้	！	เขียงไม้	！	เขียงไม้	！	เขียงไม้	！
+
+我在砧板上切菜	！	I cut vegetables on the cutting board	！	ฉันหั่นผักบนเขียง	！	ฉันหั่นผักบนเขียง	！	ฉันหั่นผักบนเขียง	！	ฉันหั่นผักบนเขียง	！	ฉันหั่นผักบนเขียง	！
+
+研钵和杵	！	mortar and pestle	！	ครกกับสาก	！	ครกกับสาก	！	ครกกับสาก	！	ครกกับสาก	！	ครกกับสาก	！
+
+研钵	！	mortar	！	ครก	！	ครก	！	ครก	！	ครก	！	ครก	！
+
+杵	！	pestle	！	สาก	！	สาก	！	สาก	！	สาก	！	สาก	！
+
+石制研钵	！	stone mortar	！	ครกหิน	！	ครกหิน	！	ครกหิน	！	ครกหิน	！	ครกหิน	！
+
+在研钵里捣碎	！	grind/pound in the mortar	！	ตำในครก	！	ตำในครก	！	ตำในครก	！	ตำในครก	！	ตำในครก	！
