--- a/9课 餐厅朗读词汇.md
+++ b/9课 餐厅朗读词汇.md
@@ -1,3 +1,115 @@
+มื้อ	-	มื้อ	-	meal	!	มื้อ	!	มื้อ	-	มื้อ	!	meal			
+
+เพิ่ง	-	เพิ่ง	-	just	!	เพิ่ง	!	เพิ่ง	-	เพิ่ง	!	just			
+
+ล็อก	-	ล็อก	-	lock	!	ล็อก	!	ล็อก	-	ล็อก	!	lock			
+
+หมี่	-	หมี่	-	rice noodles	!	หมี่	!	หมี่	-	หมี่	!	rice noodles			
+
+หมี่น้ำ	-	หมี่น้ำ	-	noodle soup	!	หมี่น้ำ	!	หมี่น้ำ	-	หมี่น้ำ	!	noodle soup			
+
+แตงโม	-	แตงโม	-	watermelon	!	แตงโม	!	แตงโม	-	แตงโม	!	watermelon			
+
+ฮื่อ	-	ฮื่อ	-	hmm	!	ฮื่อ	!	ฮื่อ	-	ฮื่อ	!	hmm			
+
+ถูกคอ	-	ถูกคอ	-	temper	!	ถูกคอ	!	ถูกคอ	-	ถูกคอ	!	temper			
+
+พนักงานเสิร์ฟ	-	พนักงานเสิร์ฟ	-	Waiter	!	พนักงานเสิร์ฟ	!	พนักงานเสิร์ฟ	-	พนักงานเสิร์ฟ	!	Waiter			
+
+แม่ครัว	-	แม่ครัว	-	Female chef	!	แม่ครัว	!	แม่ครัว	-	แม่ครัว	!	Female chef			
+
+พ่อครัว	-	พ่อครัว	-	Male chef	!	พ่อครัว	!	พ่อครัว	-	พ่อครัว	!	Male chef			
+
+เชฟ	-	เชฟ	-	Chef	!	เชฟ	!	เชฟ	-	เชฟ	!	Chef			
+
+เมนู	-	เมนู	-	Menu	!	เมนู	!	เมนู	-	เมนู	!	Menu			
+
+ส้อม	-	ส้อม	-	Fork	!	ส้อม	!	ส้อม	-	ส้อม	!	Fork			
+
+ช้อน	-	ช้อน	-	Spoon	!	ช้อน	!	ช้อน	-	ช้อน	!	Spoon			
+
+พะแนงไก่	-	พะแนงไก่	-	Curry chicken	!	พะแนงไก่	!	พะแนงไก่	-	พะแนงไก่	!	Curry chicken			
+
+壶，罐	!	เหยือก	！	เหยือก	!	jug, pitcher	!	เหยือก	！	เหยือก	!	เหยือก	！	เหยือก	！
+
+水壶	!	เหยือกน้ำ	！	เหยือกน้ำ	!	water jug	!	เหยือกน้ำ	！	เหยือกน้ำ	!	เหยือกน้ำ	！	เหยือกน้ำ	！
+
+从壶里倒水	!	เทน้ำจากเหยือก	！	เทน้ำจากเหยือก	!	pour water from a jug	!	เทน้ำจากเหยือก	！	เทน้ำจากเหยือก	!	เทน้ำจากเหยือก	！	เทน้ำจากเหยือก	！
+
+勺子	!	ช้อน	！	ช้อน	!	spoon	!	ช้อน	！	ช้อน	!	ช้อน	！	ช้อน	！
+
+汤勺	!	ช้อนซุป	！	ช้อนซุป	!	soup spoon	!	ช้อนซุป	！	ช้อนซุป	!	ช้อนซุป	！	ช้อนซุป	！
+
+叉子放在盘子旁边	!	ส้อมวางอยู่ข้างจาน	！	ส้อมวางอยู่ข้างจาน	!	The fork is placed next to the plate	!	ส้อมวางอยู่ข้างจาน	！	ส้อมวางอยู่ข้างจาน	!	ส้อมวางอยู่ข้างจาน	！	ส้อมวางอยู่ข้างจาน	！
+
+叉子	!	ส้อม	！	ส้อม	!	fork	!	ส้อม	！	ส้อม	!	ส้อม	！	ส้อม	！
+
+切菜刀	!	มีดหั่นผัก	！	มีดหั่นผัก	!	vegetable cutting knife	!	มีดหั่นผัก	！	มีดหั่นผัก	!	มีดหั่นผัก	！	มีดหั่นผัก	！
+
+把食物放在盘子上	!	วางอาหารไว้บนจาน	！	วางอาหารไว้บนจาน	!	place food on the plate	!	วางอาหารไว้บนจาน	！	วางอาหารไว้บนจาน	!	วางอาหารไว้บนจาน	！	วางอาหารไว้บนจาน	！
+
+碗	!	ชาม	！	ชาม	!	bowl	!	ชาม	！	ชาม	!	ชาม	！	ชาม	！
+
+我把汤盛到碗里	!	ฉันตักซุปใส่ชาม	！	ฉันตักซุปใส่ชาม	!	I scoop soup into a bowl	!	ฉันตักซุปใส่ชาม	！	ฉันตักซุปใส่ชาม	!	ฉันตักซุปใส่ชาม	！	ฉันตักซุปใส่ชาม	！
+
+平底锅	!	กระทะ	！	กระทะ	!	frying pan	!	กระทะ	！	กระทะ	!	กระทะ	！	กระทะ	！
+
+炸锅	!	กระทะทอด	！	กระทะทอด	!	frying pan (for deep frying)	!	กระทะทอด	！	กระทะทอด	!	กระทะทอด	！	กระทะทอด	！
+
+在锅里做饭	!	ทำอาหารในกระทะ	！	ทำอาหารในกระทะ	!	cook food in a pan	!	ทำอาหารในกระทะ	！	ทำอาหารในกระทะ	!	ทำอาหารในกระทะ	！	ทำอาหารในกระทะ	！
+
+锅	!	หม้อ	！	หม้อ	!	pot	!	หม้อ	！	หม้อ	!	หม้อ	！	หม้อ	！
+
+煮锅	!	หม้อต้ม	！	หม้อต้ม	!	boiling pot	!	หม้อต้ม	！	หม้อต้ม	!	หม้อต้ม	！	หม้อต้ม	！
+
+锅铲	!	ตะหลิว	！	ตะหลิว	!	spatula	!	ตะหลิว	！	ตะหลิว	!	ตะหลิว	！	ตะหลิว	！
+
+盛饭勺	!	ช้อนตัก	！	ช้อนตัก	!	serving spoon	!	ช้อนตัก	！	ช้อนตัก	!	ช้อนตัก	！	ช้อนตัก	！
+
+木炭炉	!	เตาถ่าน	！	เตาถ่าน	!	charcoal stove	!	เตาถ่าน	！	เตาถ่าน	!	เตาถ่าน	！	เตาถ่าน	！
+
+微波炉	!	เตาไมโครเวฟ	！	เตาไมโครเวฟ	!	microwave oven	!	เตาไมโครเวฟ	！	เตาไมโครเวฟ	!	เตาไมโครเวฟ	！	เตาไมโครเวฟ	！
+
+砧板	!	เขียง	！	เขียง	!	cutting board	!	เขียง	！	เขียง	!	เขียง	！	เขียง	！
+
+木砧板	!	เขียงไม้	！	เขียงไม้	!	wooden cutting board	!	เขียงไม้	！	เขียงไม้	!	เขียงไม้	！	เขียงไม้	！
+
+我在砧板上切菜	!	ฉันหั่นผักบนเขียง	！	ฉันหั่นผักบนเขียง	!	I cut vegetables on the cutting board	!	ฉันหั่นผักบนเขียง	！	ฉันหั่นผักบนเขียง	!	ฉันหั่นผักบนเขียง	！	ฉันหั่นผักบนเขียง	！
+
+研钵和杵	!	ครกกับสาก	！	ครกกับสาก	!	mortar and pestle	!	ครกกับสาก	！	ครกกับสาก	!	ครกกับสาก	！	ครกกับสาก	！
+
+研钵	!	ครก	！	ครก	!	mortar	!	ครก	！	ครก	!	ครก	！	ครก	！
+
+杵	!	สาก	！	สาก	!	pestle	!	สาก	！	สาก	!	สาก	！	สาก	！
+
+石制研钵	!	ครกหิน	！	ครกหิน	!	stone mortar	!	ครกหิน	！	ครกหิน	!	ครกหิน	！	ครกหิน	！
+
+在研钵里捣碎	!	ตำในครก	！	ตำในครก	!	grind/pound in the mortar	!	ตำในครก	！	ตำในครก	!	ตำในครก	！	ตำในครก	！<img width="894" alt="image" src="https://github.com/user-attachments/assets/84b711c7-fc75-4782-a0fd-401b232e577e" />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+--- 排查之前 ---
+
+
 อาหาร	-	อาหาร	-	food	อาหาร	-	อาหาร	-	อาหาร	food
 
 มื้อ	-	มื้อ	-	meal	มื้อ	-	มื้อ	-	มื้อ	meal
