--- a/9课 餐厅朗读词汇.md
+++ b/9课 餐厅朗读词汇.md
@@ -84,26 +84,7 @@
 
 石制研钵	!	ครกหิน	！	ครกหิน	!	stone mortar	!	ครกหิน	！	ครกหิน	!	ครกหิน	！	ครกหิน	！
 
-在研钵里捣碎	!	ตำในครก	！	ตำในครก	!	grind/pound in the mortar	!	ตำในครก	！	ตำในครก	!	ตำในครก	！	ตำในครก	！<img width="894" alt="image" src="https://github.com/user-attachments/assets/84b711c7-fc75-4782-a0fd-401b232e577e" />
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+在研钵里捣碎	!	ตำในครก	！	ตำในครก	!	grind/pound in the mortar	!	ตำในครก	！	ตำในครก	!	ตำในครก	！	ตำในครก	！
 
 
 
